--- a/package.json
+++ b/package.json
@@ -36,14 +36,15 @@
         "test": "jest",
         "test:watch": "jest --watchAll"
     },
-    "dependencies": {},
+    "dependencies": {
+        "axios": "^0.21.1"
+    },
     "devDependencies": {
         "@types/jest": "^26.0.23",
         "@typescript-eslint/eslint-plugin": "^4.22.0",
         "@typescript-eslint/parser": "^4.22.0",
         "eslint": "^7.25.0",
         "eslint-config-prettier": "^8.3.0",
-        "fetch-mock-jest": "^1.5.1",
         "jest": "^26.6.3",
         "prettier": "^2.2.1",
         "rimraf": "^3.0.2",
