--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "eslint": "^7.25.0",
         "eslint-config-prettier": "^8.3.0",
         "jest": "^26.6.3",
+        "nock": "^13.0.11",
         "prettier": "^2.2.1",
         "rimraf": "^3.0.2",
         "ts-jest": "^26.5.5",
